# kurigram-2.2.15

./: Makefile  PKG-INFO  hatch_build.py  pyproject.toml
compiler/api/: compiler.py
compiler/api/source/: main_api.tl
compiler/api/template/: type.txt
compiler/errors/source/: 303_SEE_OTHER.tsv  400_BAD_REQUEST.tsv  401_UNAUTHORIZED.tsv  403_FORBIDDEN.tsv  406_NOT_ACCEPTABLE.tsv  420_FLOOD.tsv  500_INTERNAL_SERVER_ERROR.tsv
pyrogram/: __init__.py  client.py  dispatcher.py  filters.py  qrlogin.py  sync.py  utils.py
pyrogram/connection/: connection.py
pyrogram/enums/: __init__.py  business_schedule.py  chat_type.py  gift_for_resale_order.py  mask_point_type.py  media_area_type.py  message_media_type.py  message_origin_type.py  message_service_type.py  paid_reaction_privacy.py  payment_form_type.py  phone_call_discard_reason.py  privacy_key.py  privacy_rule_type.py  profile_tab.py  sticker_type.py  suggested_post_refund_reason.py  suggested_post_state.py
pyrogram/handlers/: __init__.py  business_connection_handler.py  business_message_handler.py  connect_handler.py  deleted_business_messages_handler.py  disconnect_handler.py  edited_business_message_handler.py  raw_update_handler.py  start_handler.py  stop_handler.py
pyrogram/methods/account/: __init__.py  add_profile_audio.py  get_global_privacy_settings.py  remove_profile_audio.py  set_global_privacy_settings.py  set_inactive_session_ttl.py  set_privacy.py  set_profile_audio_position.py
pyrogram/methods/advanced/: __init__.py  invoke.py  recover_gaps.py  resolve_peer.py  save_file.py
pyrogram/methods/auth/: connect.py  disconnect.py  initialize.py  log_out.py  reset_session.py  send_code.py  sign_in_bot.py  terminate.py
pyrogram/methods/bots/: __init__.py  edit_user_star_subscription.py  get_bot_default_privileges.py  request_callback_answer.py  send_game.py  send_inline_bot_result.py  send_invoice.py  set_bot_default_privileges.py
pyrogram/methods/business/: __init__.py  delete_business_messages.py  get_business_account_gifts.py  get_business_account_star_balance.py  get_business_connection.py
pyrogram/methods/chats/: __init__.py  add_chat_members.py  ban_chat_member.py  close_forum_topic.py  create_folder.py  create_folder_invite_link.py  create_forum_topic.py  delete_folder.py  delete_folder_invite_link.py  delete_forum_topic.py  edit_folder.py  edit_folder_invite_link.py  edit_forum_topic.py  get_chat_settings.py  get_chats_for_folder_invite_link.py  get_dialogs.py  get_direct_messages_topics.py  get_direct_messages_topics_by_id.py  get_folder_invite_links.py  get_folders.py  get_forum_topics.py  get_forum_topics_by_id.py  get_send_as_chats.py  get_suitable_discussion_chats.py  join_folder.py  leave_folder.py  (+18 more)
pyrogram/parser/: markdown.py
pyrogram/session/: auth.py  session.py
pyrogram/storage/: __init__.py  sqlite_storage.py  storage.py
pyrogram/types/: __init__.py
(+298 files in other folders)
